# migrant

./: .coveragerc  .coveralls.yml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  buildout.cfg  pyproject.toml  setup.py  tox.ini  versions.cfg
.github/workflows/: test.yml
src/migrant/: backend.py  cli.py  engine.py  exceptions.py  repository.py
src/migrant/tests/: conftest.py  test_cli.py  test_engine.py  test_repo.py
src/migrant/tests/scripts/: aaaa_first.py  bbbb_second.py  cccc_third.py  scripts.lst
